@@ -16,8 +16,11 @@ package ch.technokrat.gecko.geckocircuits.allg;
 import ch.technokrat.gecko.GeckoSim;
 import java.io.*;
 import java.net.SocketTimeoutException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.net.URLConnection;
+import java.nio.charset.StandardCharsets;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
@@ -128,7 +131,7 @@ public final class DialogUpdate extends javax.swing.JFrame {
 
     private void loadGeckoUpdateData(final String urlString) {
         try {
-            final URL geckoReleaseURL = new URL(urlString);
+            final URL geckoReleaseURL = new URI(urlString).toURL();
             final URLConnection urlConnection = geckoReleaseURL.openConnection();
             urlConnection.setConnectTimeout(TIMEOUT_MILLIS);
 
@@ -142,7 +145,7 @@ public final class DialogUpdate extends javax.swing.JFrame {
 
             final BufferedReader bufIN = new BufferedReader(
                     new InputStreamReader(
-                    urlConnection.getInputStream()));
+                    urlConnection.getInputStream(), StandardCharsets.UTF_8));
             final StringBuffer htmlText = new StringBuffer("<html>");
 
             for (String inputLine = bufIN.readLine(); inputLine != null; inputLine = bufIN.readLine()) {
@@ -155,7 +158,7 @@ public final class DialogUpdate extends javax.swing.JFrame {
 
         } catch (SocketTimeoutException timeoutException) {
             setErrorMessage();
-        } catch (IOException exception) {
+        } catch (IOException | URISyntaxException exception) {
             setErrorMessage();
         }
     }
@@ -364,7 +367,7 @@ public final class DialogUpdate extends javax.swing.JFrame {
         }
 
         try {
-            final URL url = new URL("http://www.gecko-simulations.com/GeckoCIRCUITS/GeckoCIRCUITS.zip");
+            final URL url = new URI("http://www.gecko-simulations.com/GeckoCIRCUITS/GeckoCIRCUITS.zip").toURL();
             final URLConnection urlconnection = url.openConnection();
             if (urlconnection != null) {
                 jButtonGetUpdateOS.setText("Downloading update...");
@@ -387,7 +390,7 @@ public final class DialogUpdate extends javax.swing.JFrame {
                 jButtonGetUpdateOS.setText("Download finished!");
             }
 
-        } catch (IOException ex) {
+        } catch (IOException | URISyntaxException ex) {
             Logger.getLogger(DialogUpdate.class.getName()).log(Level.SEVERE, null, ex);
             jButtonGetUpdateOS.setText("Download failed!");
         } catch (Throwable error) {
